feat: create controller and next-page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div>
-Hello World!
-<a href="http://localhost:8080/next-page">Next page</a>
+  <h1>Hello World!</h1>
+  <a href="http://localhost:8080/next-page"><h2>Next page</h2></a>
 </div>
 </body>
 </html>
