--- a/src/main/resources/templates/next-page.html
+++ b/src/main/resources/templates/next-page.html
@@ -8,6 +8,7 @@
 <div>
   <h1>Hello Next Page!</h1>
   <a href="http://localhost:8080/index"><h2>Previous Page</h2></a>
+  <a href="http://localhost:8080/form"><h2>Form Page</h2></a>
 </div>
 </body>
 </html>
