feat: create sample article api

--- a/src/main/resources/templates/ajax/ajax-practice.html
+++ b/src/main/resources/templates/ajax/ajax-practice.html
@@ -10,6 +10,10 @@
   <input id="month-input"/> 월
   <input id="day-input"/> 일
   <button id="btn-submit">제출</button>
+
+  <h2>몇 번째 게시물이 보고 싶으신가요?</h2>
+  <input id="article-id" type="number" /> 번째
+  <button id="btn-article-submit">제출</button>
 </div>
 
 <script src="/js/ajax-practice.js"></script>
